Ações na Consulta

--- a/consulta.html
+++ b/consulta.html
@@ -53,6 +53,7 @@
       <th scope="col">Sexo:</th>
       <th scope="col">CPF:</th>
       <th scope="col">RG:</th>
+      <th scope="col">Ações</th>
 
     </tr>
   </thead>
@@ -64,6 +65,7 @@
       <td>M</td>
       <td>702295973-00</td>
       <td>200755553123</td>
+      <td><button type="button" class="btn btn-warning">Alterar</button>   <button type="button" class="btn btn-danger">Apagar</button></td>
     </tr>
     <tr>
       <th scope="row">2</th>
@@ -72,6 +74,7 @@
       <td>F</td>
       <td>13295973-00</td>
       <td>6455553123</td>
+      <td><button type="button" class="btn btn-warning">Alterar</button>   <button type="button" class="btn btn-danger">Apagar</button></td>
     </tr>    
     
   </tbody>
